Add infinite scrolling, dynamic page title based on current subreddit, and ability to switch subreddits by clicking link in nav

--- a/assets/css/vanilla.css
+++ b/assets/css/vanilla.css
@@ -8,7 +8,35 @@ html, body {
     min-height: 300px;
 }
 
+.post {
+    height: 100%;
+    overflow: auto;
+    min-height: 100%;
+    margin: 30px auto;
+}
+
 .post__thumbnail {
     float: left;
     margin-right: 15px;
+}
+
+.nav {
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
+    height: 30px;
+}
+
+.nav__item {
+    display: inline;
+}
+
+.u-center {
+    float: none;
+    margin: 0 auto;
+    display: block;
+}
+
+.subreddit-title {
+    width: 100px;
 }
